--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -5,7 +5,7 @@
    "id": "d8d36233",
    "metadata": {},
    "source": [
-    "### Questions\n",
+    "### Predictin BMI Values\n",
     "\n",
     "Dataset : https://www.kaggle.com/uciml/pima-indians-diabetes-database\n",
     "\n",
@@ -19,7 +19,6 @@
     "8. Plot the \"Predicted BMI value($\\hat{Y}_i$) of the new model\" vs \"Actual BMI value(${Y}_i$)\" curve(it is a scatter plot)\n",
     "9. Show the scatter plot of PCA generated new features and also show the linear regression curve that you got from new model.\n",
     "\n",
-    "**You can use libraries to solve these questions**"
    ]
   },
   {
