--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -5,7 +5,7 @@
    "id": "d8d36233",
    "metadata": {},
    "source": [
-    "### Predictin BMI Values\n",
+    "### Predicting BMI Values\n",
     "\n",
     "Dataset : https://www.kaggle.com/uciml/pima-indians-diabetes-database\n",
     "\n",
@@ -18,7 +18,7 @@
     "7. Plot the \"Cost function vs Iterations\" curve for this new model.\n",
     "8. Plot the \"Predicted BMI value($\\hat{Y}_i$) of the new model\" vs \"Actual BMI value(${Y}_i$)\" curve(it is a scatter plot)\n",
     "9. Show the scatter plot of PCA generated new features and also show the linear regression curve that you got from new model.\n",
-    "\n",
+    "\n"
    ]
   },
   {
